--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dependencies": {
         "@fullhuman/postcss-purgecss": "github:fullhuman/postcss-purgecss",
         "@hapi/iron": "6.0.0",
-        "axios": "^0.21.4",
+        "axios": "^0.26.1",
         "bcrypt": "^5.0.1",
-        "cloudinary": "^1.29.0",
+        "cloudinary-core": "^2.12.3",
         "cloudinary-react": "^1.7.2",
         "connect-mongo": "^4.6.0",
         "cookie": "0.4.0",
