--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "passport-local": "^1.0.0",
         "postcss-flexbugs-fixes": "^5.0.2",
         "postcss-preset-env": "^6.7.1",
+        "process": "^0.11.10",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "sass": "^1.49.11",
