--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@hapi/iron": "6.0.0",
         "axios": "^0.26.1",
         "bcrypt": "^5.0.1",
+        "cloudinary": "^1.29.0",
         "cloudinary-core": "^2.12.3",
         "cloudinary-react": "^1.7.2",
         "connect-mongo": "^4.6.0",
