--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "lint": "eslint ./ --ext js,jsx"
     },
     "dependencies": {
+        "@cloudinary/react": "^1.2.2",
+        "@cloudinary/url-gen": "^1.7.0",
         "@fullhuman/postcss-purgecss": "github:fullhuman/postcss-purgecss",
         "@hapi/iron": "6.0.0",
         "axios": "^0.26.1",
@@ -50,6 +52,7 @@
         "process": "^0.11.10",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-icons": "^4.3.1",
         "sass": "^1.49.11",
         "swr": "^0.1.18",
         "tailwindcss": "^2.2.4",
