--- a/package.json
+++ b/package.json
@@ -53,9 +53,10 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
+        "react-typeahead": "^2.0.0-alpha.8",
         "sass": "^1.49.11",
         "swr": "^0.1.18",
-        "tailwindcss": "^2.2.4",
+        "tailwindcss": "^3.0.24",
         "terser-webpack-plugin": "^5.3.1",
         "uuid": "^8.3.2",
         "uuidv4": "6.2.5",
