--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "indicative": "^7.4.4",
         "leaflet": "^1.7.1",
         "leaflet-routing-machine": "^3.2.12",
+        "lodash.isequal": "^4.5.0",
         "mailgun-js": "^0.22.0",
         "mailgun.js": "^3.6.1",
         "moment": "^2.29.2",
