--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@cloudinary/react": "^1.2.2",
         "@cloudinary/url-gen": "^1.7.0",
         "@fullhuman/postcss-purgecss": "github:fullhuman/postcss-purgecss",
+        "@geoman-io/leaflet-geoman-free": "^2.12.0",
         "@hapi/iron": "6.0.0",
         "axios": "^0.26.1",
         "bcrypt": "^5.0.1",
@@ -25,11 +26,19 @@
         "daisyui": "^1.14.0",
         "dotenv": "^10.0.0",
         "email-validator": "^2.0.4",
+        "esri-leaflet": "^3.0.8",
+        "esri-leaflet-geocoder": "^3.1.3",
         "express-session": "^1.17.2",
         "express-validator": "^6.12.1",
         "form-data": "^4.0.0",
         "indicative": "^7.4.4",
-
+        "leaflet": "^1.8.0",
+        "leaflet-control-geocoder": "^2.4.0",
+        "leaflet-geometryutil": "^0.10.1",
+        "leaflet-routing-machine": "^3.2.12",
+        "leaflet-topography": "^0.2.1",
+        "leaflet.fullscreen": "^2.3.0",
+        "leaflet.locatecontrol": "^0.76.0",
         "lodash.isequal": "^4.5.0",
         "mailgun-js": "^0.22.0",
         "mailgun.js": "^3.6.1",
@@ -51,8 +60,12 @@
         "process": "^0.11.10",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-esri-leaflet": "^2.0.1",
         "react-icons": "^4.3.1",
+        "react-leaflet": "4.0.0",
+        "react-leaflet-draw": "^0.19.8",
         "react-typeahead": "^2.0.0-alpha.8",
+        "regenerator-runtime": "^0.13.9",
         "sass": "^1.49.11",
         "swr": "^0.1.18",
         "tailwindcss": "^3.0.24",
