--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "next-session": "^3.4.3",
         "nextjs-cors": "^2.1.1",
         "nextjs-progressbar": "0.0.13",
+        "normalize.css": "^8.0.1",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "postcss-flexbugs-fixes": "^5.0.2",
